<resources>
    <string name="app_name">AppBar</string>
    <!-- Главный экран-->
    <string name="Title">AppBar приложения</string>
    <string name="SubTitle">Ячменцев Д. Н.</string>
    <string name="editStudent">СТУДЕНТ:</string>
    <!-- Первый Android проект-->
    <string name="SubTitleFirst">FirstActivity</string>
    <string name="app_Text">Hello World!</string>
    <!-- Собственный Hello world-->
    <string name="SubTitleSplash">Стартовый экран</string>
    <string name="photo">Фото Ученика</string>
    <!-- Универсальная форма ввода-->
    <string name="SubTitleUniversal">Универсальная форма ввода</string>
    <string name="txtUser">Имя пользователя</string>
    <string name="edUser"></string>
    <string name="hintUser">Username</string>
    <string name="txtEmail">Электронная почта</string>
    <string name="edEmail"></string>
    <string name="buttOk">ОК</string>
    <string name="buttClear">Очистить</string>
    <string name="edInfo"></string>
    <!-- Бесконечный переход между экранами-->
    <string name="SubTitleTransition">Просмотр фото</string>
    <string name="btBack">Назад</string>
    <string name="btForward">Вперед</string>
    <string name="edView" />
    <string name="edPhoto">Фото</string>
    <!-- Система мониторинга здоровья -->
    <string name="SubTitleMonitoring">Комплексная система мониторинга здоровья</string>
    <string name="SubTitlePatient">Информация о пациенте</string>
    <string name="subTitleIndicator">Жизненные показатели</string>
    <string name="subTitlePressure">Показания давления</string>
    <string name="txtPatient">ФИО</string>
    <string name="txtAge">Возраст</string>
    <string name="editPatient" />
    <string name="editAge" />
    <string name="btnSav">Сохранить</string>
    <string name="btnPressure">Давление</string>
    <string name="btnIndicator">Показатели</string>
    <string name="txtWeight">Вес</string>
    <string name="editWeight" />
    <string name="txtSteps">Количество шагов</string>
    <string name="editSteps" />
    <string name="txtPuls">Пульс</string>
    <string name="editPulse" />
    <string name="chkTachycardia">Тахикардия</string>
    <string name="txtUpperPressure">Верхнее давление</string>
    <string name="editUpperPressure" />
    <string name="txtLowerPressure">Нижнее давление</string>
    <string name="editLowerPressure" />
    <string name="incorrectFormat">Неверный формат</string>
    <string name="cardSaved">Сохранена карточка пациента:</string>
    <string name="Saved">Данные пациента сохранены</string>
    <!-- Взаимоисключающие CheckBox -->
    <string name="SubTitleChk">Взаимоисключающие CheckBox</string>
    <string name="txtInput">Ввод денег</string>
    <string name="txtInfo">Информация об оплате</string>
    <string name="ok">OK</string>
    <string name="txtChkBx">С банковской карты</string>
    <string name="txtChkPhone">С мобильного телефона</string>
    <string name="txtChkAdr">Наличными по адресу</string>
    <!-- Spinner «Страны-города-улицы» -->
    <string name="SubTitleSpinner">Spinner «Страны-города-улицы»</string>
    <string name="btnAdr">Показать адрес</string>
    <string-array name="countries">
        <item>Россия</item>
        <item>Украина</item>
        <item>Белоруссия</item>
    </string-array>
    <string-array name="r_cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Казань</item>
    </string-array>
    <string-array name="u_cities">
        <item>Киев</item>
        <item>Одесса</item>
        <item>Харьков</item>
    </string-array>
    <string-array name="b_cities">
        <item>Минск</item>
        <item>Гомель</item>
        <item>Торжок</item>
    </string-array>
    <!-- CalendarView «Сроки задачи» -->
    <string name="SubTitleCalendar">Календарь «Сроки задачи»</string>
    <string name="txtStart">Дата-время старт задачи:</string>
    <string name="txtStop">Дата-время стоп задачи: </string>
    <string name="btnOk">OK</string>
    <!-- Записная книжка в SharedPreferences -->
    <string name="SubTitleNotebook">Записная книжка</string>
    <string name="txtNote">Заметка:</string>
    <string name="editNote" />
    <string name="btnSave">Сохранить</string>
    <!-- Общие значения -->
    <string name="notEnoughData">Введены не все данные</string>
    <string name="makeSettings">Начальная страница</string>
    <!-- Меню -->
    <string name="mnSettings">Студент</string>
    <string name="mnFirst">FirstActivity</string>
    <string name="mnSplash">SplashScreen</string>
    <string name="mnUniversal">Универсальная форма</string>
    <string name="mnTransition">Просмотр фото</string>
    <string name="mnMonitoring">Мониторинг здоровья</string>
    <string name="mnCheckbox">Checkbox</string>
    <string name="mnSpinner">Spinner</string>
    <string name="mnCalendar">Календарь</string>
    <string name="mnNotes">Записная книжка</string>
</resources>