<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkbox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="false"
    android:background="@color/colorBackGround"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".CheckboxActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/user"
        app:subtitle="@string/SubTitleChk"
        app:subtitleTextAppearance="@style/Toolbar.SubTitle"
        app:title="@string/Title"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <EditText
        android:id="@+id/inputMoney"
        style="@style/chkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/txtInput"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/inputInfo"
        style="@style/chkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/txtInfo"
        android:inputType="text"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:text="@string/ok" />

    <CheckBox
        android:id="@+id/bankCardChkBx"
        style="@style/CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtChkBx" />

    <CheckBox
        android:id="@+id/mobilePhoneChkBx"
        style="@style/CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtChkPhone" />

    <CheckBox
        android:id="@+id/cashAddressChkBx"
        style="@style/CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtChkAdr" />
</LinearLayout>