<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/monitoring"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    tools:context=".MonitoringActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/icons8pulse"
        app:subtitle="@string/SubTitlePatient"
        app:subtitleTextAppearance="@style/Toolbar.SubTitle"
        app:title="@string/SubTitleMonitoring"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <TextView
        android:id="@+id/txtPatient"
        style="@style/TextView"
        android:layout_width="0dp"
        android:layout_marginTop="65dp"
        android:text="@string/txtPatient"
        app:layout_constraintStart_toStartOf="@id/editPatient"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPatient"
        style="@style/editText"
        android:layout_marginStart="24dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/editPatient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/my_toolbar" />

    <TextView
        android:id="@+id/txtAge"
        style="@style/TextView"
        android:layout_marginTop="15dp"
        android:text="@string/txtAge"
        app:layout_constraintStart_toStartOf="@id/editPatient"
        app:layout_constraintTop_toBottomOf="@id/editPatient" />

    <EditText
        android:id="@+id/editAge"
        style="@style/editText"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/editAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAge" />

    <Button
        android:id="@+id/btnSav"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/btnSav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAge" />

    <Button
        android:id="@+id/btnPressure"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnPressure"
        app:layout_constraintEnd_toStartOf="@id/btnSav"
        app:layout_constraintTop_toBottomOf="@id/btnSav" />

    <Button
        android:id="@+id/btnIndicator"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnIndicator"
        app:layout_constraintStart_toEndOf="@id/btnSav"
        app:layout_constraintTop_toBottomOf="@id/btnSav" />

</androidx.constraintlayout.widget.ConstraintLayout>