<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="false"
    android:background="@color/colorBackGround"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".TransitionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        app:navigationIcon="@drawable/user"
        app:subtitle="@string/SubTitleTransition"
        app:subtitleTextAppearance="@style/Toolbar.SubTitle"
        app:title="@string/Title"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="297dp"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/edPhoto"
        app:layout_constraintBottom_toTopOf="@+id/butForward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/colorPrimary" />

    <Button
        android:id="@+id/butBack"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/btBack"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/butForward"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/btForward"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextView"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:text="@string/edView"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>